[project]
name = "personal-twilog"
version = "0.1.0"
description = "personal twilog"
authors = [
    { name = "shift" }
]
dependencies = [
    "coverage>=7.14.3",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "mock>=5.2.0",
    "orjson>=3.11.9",
    "pycodestyle>=2.14.0",
    "ruff>=0.15.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.51",
    "tweeterpy>=2.0.17",
    "twitter-api-client>=0.10.22",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    "__pycache__",
    ".coveragerc",
    ".git",
    ".venv",
    "venv",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
unittest = "python -m unittest"
cover = {chain = ["coverage run --source . -m unittest discover", "coverage html"]}
deploy = "./copy_to_run.bat"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_twilog"]
